# adviser

./: .gitignore  README.md  pyproject.toml  repo_map.md  test_windows_path_fix.py  test_yaml_fix.py  test_yaml_parsing.py  validate.py  verify_regex.py
cfg/: loader.py  schema.py
cli/: main.py
cli/commands/: ask.py  critic.py  exec.py  exec_step.py  flow.py  ocr_flow.py  plan.py  review.py  review_step.py  utils.py
common/: __init__.py  types.py
config/dev/: app.yaml  models.yaml
config/prod/: app.yaml  models.yaml
config/test/: app.yaml  models.yaml
db/: db.py  runtime.py
docs/: Advisor Strategy System current state 20260416.md  System Prompt AI-assistent.md  advisor-architecture.md  critic-plan.md  impl-plan.md  local_models_usage_in_adviser.md  vendor-agnostic-adviser-concept.md
docs/architecture/: instructor-integration.md
docs/fixtures/: ctx_ecg.yaml  ctx_lab.yaml  ctx_ultrasound.yaml
docs/plans/: instructor-executor-critic.md  kb_implementation_plan.md  planner-executor-critic.md  refactor-PEC-flow-20260501.md  schema-refactoring.md
docs/steps/: result_code.json  result_generic.json  (+2 more)
llm/: client_factory.py  errors.py  factory.py  mock.py  mock_scenarios.py  openai_client.py  protocol.py  types.py
orchestrator/: build_orchestrator.py  critic.py  models.py  orchestrator.py  planner.py  reviewer.py  router.py
prompts/: code_executor.md  critic.md  generic_executor.md  planner.md
tests/: test_loader_app.py  test_models_loader.py  test_planner_structured.py  test_prompts_renderer.py  test_smoke.py
tools/: logging.py  prompt.py  prompts.py
(+67 files in other folders)
