[project]
name = "advisor"
version = "0.1.0"
description = "advisor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.24.1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]

[project.scripts]
advisor = "cli.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]