[project]
name = "advisor"
version = "0.1.0"
description = "advisor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openai>=2.31.0",
  "pydantic>=2.13.0",
  "pyyaml>=6.0.3",
  "typer>=0.24.1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]

[project.scripts]
advisor = "cli.main:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"